istio/envoyfilter/compressor.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: gzip-demo
spec:
  workloadSelector:
    labels:
      app: sleep
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.compressor
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
            response_direction_config:
              common_config:
                min_content_length: 100
                content_type:
                  - application/javascript
                  - application/json
                  - application/xhtml+xml
                  - image/svg+xml
                  - text/css
                  - text/html
                  - text/plain
                  - text/xml
            compressor_library:
              name: text_optimized
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                memory_level: 6
                window_bits: 10
                compression_level: BEST_COMPRESSION
                compression_strategy: DEFAULT_STRATEGY
