istio/envoyfilter/dns-cluster.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: dns-cluster
  namespace: default
spec:
  workloadSelector:
    labels:
      app: sleep
  configPatches:
    - applyTo: CLUSTER
      match:
        context: SIDECAR_OUTBOUND
        cluster:
          service: httpbin.default.svc.cluster.local
      patch:
        operation: ADD
        value:
          name: httpbin_cluster
          type: STRICT_DNS
          connect_timeout: 10s
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          dns_refresh_rate: 500ms
          load_assignment:
            cluster_name: httpbin_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: httpbin.default.svc.cluster.local
                          port_value: 8000
