istio/envoyfilter/inbound-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: pacth-inbound-route
spec:
  workloadSelector:
    labels:
      app: httpbin
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          vhost:
            name: inbound|http|8000 # 基于端口筛选
            route:
              action: ANY
      patch:
        operation: INSERT_BEFORE
        value:
          match:
            prefix: /ip
          name: ip
          route:
            cluster: inbound|80||
