istio/envoyfilter/istio-ratelimit-filters.yaml
# this's used to reproduce the issue of https://github.com/istio/istio/issues/58914
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: patch-any-virtual-hosts
  namespace: sample
spec:
  configPatches:
    # Patch the VirtualHosts with the rate limits
    - applyTo: VIRTUAL_HOST
      match:
        context: SIDECAR_OUTBOUND
        routeConfiguration:
          vhost:
            route:
              action: ANY
      patch:
        operation: MERGE
        value:
          rate_limits:
            - actions:
                - request_headers:
                    header_name: "key-1"
                    descriptor_key: "value-1"

# kubectl patch svc helloworld -n sample --type='json' -p='[{"op": "replace", "path": "/spec/ports/0/targetPort", "value": 80}]'
# kubectl patch svc helloworld -n sample --type='json' -p='[{"op": "replace", "path": "/spec/ports/0/targetPort", "value": 5000}]'
# istioctl pc r -n sample deploy/sleep --name "helloworld.sample.svc.cluster.local:80" -o yaml
