istio/envoyfilter/merge-cluster.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: merge-cluster
  namespace: istio-system
spec:
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        name: outbound|8000||httpbin.default.svc.cluster.local
    patch:
      operation: MERGE
      value:
        name: "outbound|8000||httpbin.default.svc.cluster.local"
        http2_protocol_options: 
          initial_stream_window_size: 5242880
