istio/envoyfilter/patch-virtualhost.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: patch-virtualhost
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: httpbin
  configPatches:
    - applyTo: VIRTUAL_HOST
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          vhost:
            name: inbound|http|8000
      patch:
        operation: REPLACE
        value:
          domains:
          - '*'
          name: inbound|http|8000
          routes:
          - decorator:
              operation: httpbin.sample.svc.cluster.local:8000/*
            match:
              prefix: /
            name: default
            route:
              cluster: inbound|8080||
              maxStreamDuration:
                grpcTimeoutHeaderMax: 0s
                maxStreamDuration: 0s
