istio/envoyfilter/route-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ignore-path
  namespace: istio-system
spec:
  configPatches:
    - applyTo: ROUTE_CONFIGURATION
      match:
        context: GATEWAY
      patch:
        operation: MERGE
        value:
          ignorePathParametersInPathMatching: true
